tests/snapshots/test__from_fixtures@enum__add_and_remove.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    enum:
      - error
      - warning
      - debug
    type: string
  rhs:
    enum:
      - error
      - info
      - debug
    type: string
input_file: tests/fixtures/enum/add_and_remove.json
---
[
    Change {
        path: "",
        change: EnumRemove {
            removed: String("warning"),
            rhs_has_no_enum: false,
        },
    },
    Change {
        path: "",
        change: EnumAdd {
            added: String("info"),
            lhs_has_no_enum: false,
        },
    },
]
