tests/snapshots/test__from_fixtures@enum__remove.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    enum:
      - error
      - warning
      - info
      - debug
    type: string
  rhs:
    enum:
      - error
      - warning
      - info
    type: string
input_file: tests/fixtures/enum/remove.json
---
[
    Change {
        path: "",
        change: EnumRemove {
            removed: String("debug"),
            rhs_has_no_enum: false,
        },
    },
]
