tests/snapshots/test__from_fixtures@enum__unchanged.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    enum:
      - error
      - warning
      - info
    type: string
  rhs:
    enum:
      - error
      - warning
      - info
    type: string
input_file: tests/fixtures/enum/unchanged.json
---
[]
